--- a/app/src/main/res/layout/item_mis_incidencias.xml
+++ b/app/src/main/res/layout/item_mis_incidencias.xml
@@ -28,7 +28,7 @@
                 android:layout_height="80dp">
             </ImageView>
             <TextView
-                android:id="@+id/tvtitleincidencia"
+                android:id="@+id/tvtype_incidence"
                 android:layout_marginTop="10dp"
                 android:text="Robro o hurto"
                 android:layout_width="wrap_content"
