--- a/app/src/main/res/layout/fragment_incidencias2.xml
+++ b/app/src/main/res/layout/fragment_incidencias2.xml
@@ -1,22 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.incidencia.Incidencias2Fragment">
 
-    <!--     tools:listitem="@layout/item_incidencia"-->
-    <TextView
-        android:text="incidencia 2we"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="90dp"
+        android:background="@color/purple_500"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    </TextView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/input_1"
+            >
+
+            <cn.zhaiyifan.rememberedittext.RememberEditText
+                android:id="@+id/etbuscar1"
+                android:layout_marginEnd="05dp"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_alignParentTop="true"
+                android:hint="Buscar "
+                android:inputType="textCapWords"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
+                app:autoFill="false"
+                app:autoSave="true"
+                app:rememberId="searchText"
+                app:rememberCount="5"
+                android:drawableLeft="@drawable/ic_search_black_24dp"
+                android:background="@drawable/input_1"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-
+        android:layout_marginTop="10dp"
         android:id="@+id/recyclerindicencias2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+</LinearLayout>
