--- a/app/src/main/res/layout/fragment_mis_incidencias.xml
+++ b/app/src/main/res/layout/fragment_mis_incidencias.xml
@@ -4,11 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context=".ui.misincidencias.MisIncidenciasFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:background="@color/purple_500"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/input_1"
+            >
+
+            <cn.zhaiyifan.rememberedittext.RememberEditText
+                android:id="@+id/etbuscar1"
+                android:layout_marginEnd="05dp"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_alignParentTop="true"
+                android:hint="Buscar "
+                android:inputType="textCapWords"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
+                app:autoFill="false"
+                app:autoSave="true"
+                app:rememberId="searchText"
+                app:rememberCount="5"
+                android:drawableLeft="@drawable/ic_search_black_24dp"
+                android:background="@drawable/input_1"
+                />
+        </LinearLayout>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
         tools:listitem="@layout/item_mis_incidencias"
         android:id="@+id/recyclermisindicencias"
         android:layout_width="match_parent"
