--- a/app/src/main/res/layout/item_mis_incidencias.xml
+++ b/app/src/main/res/layout/item_mis_incidencias.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:drawableLeft="@drawable/ic_location_dos"
                 android:id="@+id/tvlocation"
                 android:text="Av. venidasd sdfndfd Peru"
                 android:layout_width="0dp"
